change the width to fix screen

--- a/IronMan.html
+++ b/IronMan.html
@@ -5,10 +5,41 @@
 		<title>Marvel Universe Game</title>
 
 		<style type="text/css">
+			body {
+				background-color: darkblue;	
+			}
+
 			.Title {
 				font-size: 70px;
 				text-align: center;
 				background-color: red;
+			} 
+
+			p {
+				font-size: 20px;
+				color: white;
+			}
+
+			a {
+				font-size: 20px
+			}
+
+			a:link{
+				color:red;
+
+			}
+
+			a:visited {
+				color:purple;
+				text-decoration: underline;
+			}
+
+			a:hover {
+				color: yellow;
+			}
+
+			a:active {
+				color: brown;	
 			}
 
 		</style>
@@ -21,8 +52,18 @@
 		<br>
 		<br>
 		<div id="story">
-		<p>You have a date with Pepper, but Jarvis tells you someone broke your security and try to steal you suit.</p>
+		<p>
+			You have a date with Pepper, but Jarvis tells you someone broke your security and try to steal you suit. What are you going to do?
+		</p>
+		<br>
 		<img src="http://mediafiles.cineplex.com/Blog/English/FullSize/pepperironman3.jpg">
+		<br>
+		<br>
+		<a href="IronManBD1.html">Keep dating with Pepper</a>
+		<br>
+
+		<a href="IronMan2.html">Go back to Stark to check what is happening</a>
+
 		<div>
 	</body>
 </html>
