add changes and makes new web.
Half way down on IronMan9.

--- a/IronMan5.html
+++ b/IronMan5.html
@@ -68,7 +68,7 @@
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan5.html">Attack Whiplash at right</a>
+				<a href="IronMan5-1.html">Attack Whiplash at right</a>
 			</div>
 		</div>
 		<br>
