--- a/IronMan7.html
+++ b/IronMan7.html
@@ -23,7 +23,7 @@
 				display: block;
 				margin-right: auto;
 				margin-left: auto;
-				width: 25%;
+				width: 50%;
 
 			}
 
@@ -60,38 +60,16 @@
 	
 	<body>
 		<h1>Iron Man's Story</h1>
-		<p>It doesn't work, keep trying.</p>
-		<img src="http://i.annihil.us/u/prod/marvel//universe3zx/images/6/69/Whiplash_Avanko_main.jpg" class = "Vanko">
+		<p>You know that Loki is behind all this, then yopu decide going after him. When you arrive, you saw thor and hulk is there.</p>
+		<img src="https://abstracticality.files.wordpress.com/2014/02/6708_2_large.jpg" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan5-1.html">Attack Whiplash at left</a>
+				<a href="IronMan8.html">Talk to them</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan5.html">Attack Whiplash at right</a>
+				<a href="IronManBD3.html">Chioce to finish youself</a>
 			</div>
-
 		</div>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-
-		<a href="IronMan6.html" id = "choice3">Put all the energy in the chest and shot</a>
-
 	</body>
 </html>
