--- a/IronMan8.html
+++ b/IronMan8.html
@@ -23,7 +23,7 @@
 				display: block;
 				margin-right: auto;
 				margin-left: auto;
-				width: 25%;
+				width: 50%;
 
 			}
 
@@ -60,38 +60,10 @@
 	
 	<body>
 		<h1>Iron Man's Story</h1>
-		<p>It doesn't work, keep trying.</p>
-		<img src="http://i.annihil.us/u/prod/marvel//universe3zx/images/6/69/Whiplash_Avanko_main.jpg" class = "Vanko">
+		<p>Thor tells Loki try to use the power of mind stone become the king on Earth. We have to all fight together to end Loki's scheme</p>
+		<img src="http://d.ibtimes.co.uk/en/full/1382009/tom-hiddleston-loki.jpg" class = "Vanko">
 		<div id = "links">
-			<div class = "choice" id = "choice1">
-				<a href="IronMan5-1.html">Attack Whiplash at left</a>
-			</div>
-
-			<div class "choice" id = "choice2">	
-				<a href="IronMan5.html">Attack Whiplash at right</a>
-			</div>
-
+			<a href="IronMan9.html">Start your final battle!!!!</a>
 		</div>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-
-		<a href="IronMan6.html" id = "choice3">Put all the energy in the chest and shot</a>
-
 	</body>
 </html>
