--- a/IronMan5-1.html
+++ b/IronMan5-1.html
@@ -61,16 +61,15 @@
 	<body>
 		<h1>Iron Man's Story</h1>
 		<p>It doesn't work, keep trying.</p>
-		<img src="http://i.annihil.us/u/prod/marvel//universe3zx/images/6/69/Whiplash_Avanko_main.jpg" class = "Vanko">
+		<img src="http://static2.wikia.nocookie.net/__cb20120507225033/marvelfanfiction/images/9/96/1153509-1116472_whiplash_11_super.jpg" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan5-1.html">Attack Whiplash at left</a>
+				<a href="IronMan4.html">Attack Whiplash at left</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
 				<a href="IronMan5.html">Attack Whiplash at right</a>
 			</div>
-
 		</div>
 		<br>
 		<br>
@@ -92,6 +91,8 @@
 		<br>
 
 		<a href="IronMan6.html" id = "choice3">Put all the energy in the chest and shot</a>
+			
+
 
 	</body>
 </html>
