Finish IronMan, start hulk

--- a/Final1.html
+++ b/Final1.html
@@ -59,25 +59,11 @@
 	</head>
 	
 	<body>
-		<h1>Iron Man's Story</h1>
-		<p>What you going to do?</p>
-		<img src="http://vignette2.wikia.nocookie.net/marvelcinematicuniverse/images/5/51/Andyparkart-the-avengers-loki-s-army.jpg/revision/latest?cb=20131107144742" class = "Vanko">
+		<h1>Good End</h1>
+		<p>You and your team defeat Loki, the world is safe, now you can go back to your date with Pepper</p>
+		<img src="http://img2.wikia.nocookie.net/__cb20120510011700/marvelcinematicuniverse/images/5/5a/Tony-stark-and-pepper-potts-for-the-iron-man-movie.jpg" class = "Vanko">
 		<div id = "links">
-			<div class = "choice" id = "choice1">
-				<a href="IronMan9-1.html">Going South</a>
-			</div>
-
-			<div class "choice" id = "choice2">	
-				<a href="IronMan9-2.html">Going North</a>
-			</div>
-
-			<div class = "choice" id = "choice3">
-				<a href="IronMan9-3.html">Going East</a>
-			</div>
-
-			<div class = "choice" id = "choice4">
-				<a href="IronMan9-4.html">Going West</a>
-			</div>
+			<a href="Game2.html">Start over</a>
 		</div>
 	</body>
 </html>
