--- a/IronMan.html
+++ b/IronMan.html
@@ -48,7 +48,7 @@
 	</head>
 	
 	<body>
-		<h1>Iron Man'<a href="IronManHE.html" id = "Hidden">s</a> Story</h1>
+		<h1>Iron Man'<a href="IronManHiddenEnd.html" id = "Hidden">s</a> Story</h1>
 		<br>
 		<br>
 		<br>
