--- a/IronMan9-1.html
+++ b/IronMan9-1.html
@@ -37,47 +37,29 @@
 
 			}
 
-			a:link, a:visited {
-				color:red;
-				text-decoration: underline;
+			a {
+				color: red;
 			}
 
-			a:hover {
-				color: yellow;
-			}
 
-			a:active {
-				color: brown;	
-			}
-
-			#choice3 {
-				color: darkblue;
-					
-				font-size: 20px;
-			}
 		</style>
 	</head>
 	
 	<body>
 		<h1>Iron Man's Story</h1>
-		<p>What you going to do?</p>
-		<img src="http://vignette2.wikia.nocookie.net/marvelcinematicuniverse/images/5/51/Andyparkart-the-avengers-loki-s-army.jpg/revision/latest?cb=20131107144742" class = "Vanko">
+		<p>Part of your suit has been control by Loki.</p>
+		<img src="http://images3.wikia.nocookie.net/__cb20130507170822/marveldatabase/images/5/50/Iron_Legion.png" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan9-1.html">Going South</a>
+				<a href="IronMan9-5.html">Destory all your suit, </a><a href="Final1.html" class = "choice" id = "choiceH">world safety </a><a href ="IronMan9-5.html">first.</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan9-2.html">Going North</a>
-			</div>
-
-			<div class = "choice" id = "choice3">
-				<a href="IronMan9-3.html">Going East</a>
-			</div>
-
-			<div class = "choice" id = "choice4">
-				<a href="IronMan9-4.html">Going West</a>
+				<a href="IronMan9-5.html">Try to get your suit back to your control.</a>
 			</div>
 		</div>
+
+
+
 	</body>
 </html>
