--- a/IronMan9-2.html
+++ b/IronMan9-2.html
@@ -23,7 +23,7 @@
 				display: block;
 				margin-right: auto;
 				margin-left: auto;
-				width: 50%;
+				width: 25%;
 
 			}
 
@@ -50,6 +50,10 @@
 				color: brown;	
 			}
 
+
+
+
+
 			#choice3 {
 				color: darkblue;
 					
@@ -60,24 +64,20 @@
 	
 	<body>
 		<h1>Iron Man's Story</h1>
-		<p>What you going to do?</p>
-		<img src="http://vignette2.wikia.nocookie.net/marvelcinematicuniverse/images/5/51/Andyparkart-the-avengers-loki-s-army.jpg/revision/latest?cb=20131107144742" class = "Vanko">
+		<p>Loki is right there, you are going to defeat him</p>
+		<img src="http://vignette3.wikia.nocookie.net/marvelcinematicuniverse/images/a/aa/Loki_textless.jpg/revision/latest?cb=20140625190152" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan9-1.html">Going South</a>
+				<a href="IronMan9-5.html">Use all your energy on attack</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan9-2.html">Going North</a>
+				<a href="IronMan9-5.html">Use on your energy on defence.</a>
 			</div>
-
-			<div class = "choice" id = "choice3">
-				<a href="IronMan9-3.html">Going East</a>
-			</div>
-
-			<div class = "choice" id = "choice4">
-				<a href="IronMan9-4.html">Going West</a>
-			</div>
+			<a href="Final1.html" id = "choice3">Put all the energy in the chest and shot</a>
 		</div>
+
+
+
 	</body>
 </html>
