--- a/IronMan9-4.html
+++ b/IronMan9-4.html
@@ -23,7 +23,7 @@
 				display: block;
 				margin-right: auto;
 				margin-left: auto;
-				width: 50%;
+				width: 25%;
 
 			}
 
@@ -50,34 +50,66 @@
 				color: brown;	
 			}
 
-			#choice3 {
-				color: darkblue;
-					
-				font-size: 20px;
-			}
+
 		</style>
 	</head>
 	
 	<body>
 		<h1>Iron Man's Story</h1>
-		<p>What you going to do?</p>
-		<img src="http://vignette2.wikia.nocookie.net/marvelcinematicuniverse/images/5/51/Andyparkart-the-avengers-loki-s-army.jpg/revision/latest?cb=20131107144742" class = "Vanko">
+		<p>You saw alot humans control by mind stone and attacking each other</p>
+		<img src="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2013/6/17/1371489578534/crowd-of-people-on-London-010.jpg" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan9-1.html">Going South</a>
+				<a href="IronMan9-5.html">Ignore them.</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan9-2.html">Going North</a>
+				<a href="Final1.html">attack them</a>
 			</div>
 
-			<div class = "choice" id = "choice3">
-				<a href="IronMan9-3.html">Going East</a>
-			</div>
-
-			<div class = "choice" id = "choice4">
-				<a href="IronMan9-4.html">Going West</a>
-			</div>
 		</div>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<a href="Final1.html">put them in sleep</a>
+
 	</body>
 </html>
