--- a/IronManHiddenEnd.html
+++ b/IronManHiddenEnd.html
@@ -59,25 +59,11 @@
 	</head>
 	
 	<body>
-		<h1>Iron Man's Story</h1>
-		<p>What you going to do?</p>
-		<img src="http://vignette2.wikia.nocookie.net/marvelcinematicuniverse/images/5/51/Andyparkart-the-avengers-loki-s-army.jpg/revision/latest?cb=20131107144742" class = "Vanko">
+		<h1>Hidden End</h1>
+		<p>You tell Jarvis to start the house party system, then it do evrything for you. The world is safe, and you keep dating with Pepper.</p>
+		<img src="http://bestanimations.com/Holidays/Fireworks/fireworksanimation-13.gif" class = "Vanko">
 		<div id = "links">
-			<div class = "choice" id = "choice1">
-				<a href="IronMan9-1.html">Going South</a>
-			</div>
-
-			<div class "choice" id = "choice2">	
-				<a href="IronMan9-2.html">Going North</a>
-			</div>
-
-			<div class = "choice" id = "choice3">
-				<a href="IronMan9-3.html">Going East</a>
-			</div>
-
-			<div class = "choice" id = "choice4">
-				<a href="IronMan9-4.html">Going West</a>
-			</div>
+			<a href="Game2.html">Start Over</a>
 		</div>
 	</body>
 </html>
