--- a/hulk.html
+++ b/hulk.html
@@ -3,10 +3,67 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
+
+		<style type="text/css">
+			body {
+				background-color: darkgreen;	
+			}
+
+			h1  {
+				font-size: 70px;
+				text-align: center;
+				background-color: black;
+				color: white;
+			} 
+
+			p {
+				font-size: 20px;
+				color: white;
+			}
+
+			.choice {
+				font-size: 20px
+			}
+
+			.choice:link, a:visited {
+				color:yellow;
+				text-decoration: underline;
+			}
+
+			.choice:hover {
+				color: purple;
+			}
+
+			.choice:active {
+				color: brown;	
+			}
+
+			img {
+				width: 50%;
+			}
+
+		</style>
 		
 	</head>
 	
 	<body>
+		<h1>Hulk's Story</h1>
+		<br>
+		<br>
+		<br>
+		<div id="story">
+		<p>
+			S.H.I.E.L.D invite to the base. He tells you there is a gaint creature destorying the city, they need help from Hulk.
+		</p>
+		<br>
+		<img src="http://images4.fanpop.com/image/photos/24100000/The-new-Bruce-Banner-marvel-comics-24174067-1270-715.jpg">
+		<br>
+		<br>
+		<a href="Hulk2.html" class = "choice">Accept, cause you know the world is in dangerous</a>
+		<br>
 
+		<a href="HulkBD1.html" class = "choice">Refuse, you afraid turn in to Hulk and lose control</a>
+
+		<div>
 	</body>
 </html>
