--- a/IronMan5-1.html
+++ b/IronMan5-1.html
@@ -2,58 +2,15 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
+		<link rel="stylesheet" type="text/css" href="Style.css">
 		<style type="text/css">
-			body {
-				background-color: darkblue;	
-			}
-
-			h1  {
-				font-size: 70px;
-				text-align: center;
-				background-color: red;
-			} 
-
-			p {
-				font-size: 20px;
-				color: white;
-				text-align: center;
-			}
-
+			
 			.Vanko{
 				display: block;
 				margin-right: auto;
 				margin-left: auto;
 				width: 25%;
 
-			}
-
-			#links {
-				margin-left:auto;
-				margin-right: auto;
-				width: 11%;
-				padding-left: auto;
-				padding-right: auto;
-				font-size: 20px;
-
-			}
-
-			a:link, a:visited {
-				color:red;
-				text-decoration: underline;
-			}
-
-			a:hover {
-				color: yellow;
-			}
-
-			a:active {
-				color: brown;	
-			}
-
-			#choice3 {
-				color: darkblue;
-					
-				font-size: 20px;
 			}
 		</style>
 	</head>
