--- a/IronMan9-3.html
+++ b/IronMan9-3.html
@@ -23,7 +23,7 @@
 				display: block;
 				margin-right: auto;
 				margin-left: auto;
-				width: 50%;
+				width: 25%;
 
 			}
 
@@ -50,34 +50,26 @@
 				color: brown;	
 			}
 
-			#choice3 {
-				color: darkblue;
-					
-				font-size: 20px;
-			}
+
 		</style>
 	</head>
 	
 	<body>
 		<h1>Iron Man's Story</h1>
-		<p>What you going to do?</p>
-		<img src="http://vignette2.wikia.nocookie.net/marvelcinematicuniverse/images/5/51/Andyparkart-the-avengers-loki-s-army.jpg/revision/latest?cb=20131107144742" class = "Vanko">
+		<p>You saw Chitauris are destorying the city.</p>
+		<img src="http://vignette1.wikia.nocookie.net/marvelmovies/images/6/63/301790_10150804149347113_676782112_9322420_310834602_n_(1).jpg/revision/latest?cb=20120512155947" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan9-1.html">Going South</a>
+				<a href="IronMan9-5.html">Ignore them.</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan9-2.html">Going North</a>
+				<a href="Final1.html">Stop them</a>
 			</div>
 
-			<div class = "choice" id = "choice3">
-				<a href="IronMan9-3.html">Going East</a>
-			</div>
-
-			<div class = "choice" id = "choice4">
-				<a href="IronMan9-4.html">Going West</a>
-			</div>
 		</div>
+
+
+
 	</body>
 </html>
