Finish Hulk story without ED and BD

--- a/Hulk5.html
+++ b/Hulk5.html
@@ -5,24 +5,25 @@
 		<link rel="stylesheet" type="text/css" href="StyleHulk.css">
 		<style type="text/css">
 
-
 			.Hemmer {
 				display: block;
 				margin-right: auto;
 				margin-left: auto;
-				width: 50%;
+				width: 40%;
+
 			}
+
 
 		</style>
 	</head>
 	
 	<body>
 		<h1>Hulk's Story</h1>
-		<p>You saw Abomination is destorying the street, then he notice you are here and start attacking you.</p>
-		<img src="https://upload.wikimedia.org/wikipedia/en/9/99/MovieAbomination.jpg" class = "Hemmer">
+		<p>You saw Loki is trying to control you use mind stone, but you realize him faster. After Loki realzie he failed, he ran away. </p>
+		<img src="http://vignette3.wikia.nocookie.net/marvelmovies/images/f/f7/Loki_Avengers.png/revision/latest?cb=20120405125038" class = "Hemmer">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="Hulk3.html">Next --> </a>
+				<a href="Hulk6.html">Chase after Loki</a>
 			</div>
 
 		</div>
