--- a/Hulk7.html
+++ b/Hulk7.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
-		<link rel="stylesheet" type="text/css" href="Style.css">
+		<link rel="stylesheet" type="text/css" href="StyleHulk.css">
 		<style type="text/css">
 
 		
@@ -25,16 +25,16 @@
 	</head>
 	
 	<body>
-		<h1>Iron Man's Story</h1>
-		<p>You know that Loki is behind all this, then yopu decide going after him. When you arrive, you saw thor and hulk is there.</p>
+		<h1>Hulk's Story</h1>
+		<p>Thor tells you Loki is trying to use mind stones to control all the humans, then you saw Ironman is come to your way.</p>
 		<img src="https://abstracticality.files.wordpress.com/2014/02/6708_2_large.jpg" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan8.html">Talk to them</a>
+				<a href="IronMan8.html">Punch Ironman</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronManBD3.html">Chioce to finish youself</a>
+				<a href="Hulk8.html">Stay quite</a>
 			</div>
 		</div>
 	</body>
