--- a/Hulk8.html
+++ b/Hulk8.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
-		<link rel="stylesheet" type="text/css" href="Style.css">
+		<link rel="stylesheet" type="text/css" href="StyleHulk.css">
 
 		<style type="text/css">
 			.Vanko{
@@ -13,20 +13,15 @@
 
 			}
 
-			#choice3 {
-				color: darkblue;
-					
-				font-size: 20px;
-			}
 		</style>
 	</head>
 	
 	<body>
-		<h1>Iron Man's Story</h1>
-		<p>Thor tells Loki try to use the power of mind stone become the king on Earth. We have to all fight together to end Loki's scheme</p>
+		<h1>Hulk's Story</h1>
+		<p>You try to work with Ironman and Thor to end Loki's scheme</p>
 		<img src="http://d.ibtimes.co.uk/en/full/1382009/tom-hiddleston-loki.jpg" class = "Vanko">
 		<div id = "links">
-			<a href="IronMan9.html">Start your final battle!!!!</a>
+			<a href="Hulk9.html">Start your final battle!!!!</a>
 		</div>
 	</body>
 </html>
