--- a/Hulk9-2.html
+++ b/Hulk9-2.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
-		<link rel="stylesheet" type="text/css" href="Style.css">
+		<link rel="stylesheet" type="text/css" href="StyleHulk.css">
 
 		<style type="text/css">
 
@@ -25,18 +25,18 @@
 	</head>
 	
 	<body>
-		<h1>Iron Man's Story</h1>
-		<p>Loki is right there, you are going to defeat him</p>
+		<h1>Hulk's Story</h1>
+		<p>Loki is right there, and he is about to say something</p>
 		<img src="http://vignette3.wikia.nocookie.net/marvelcinematicuniverse/images/a/aa/Loki_textless.jpg/revision/latest?cb=20140625190152" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan9-5.html">Use all your energy on attack</a>
+				<a href="Hulk9-5.html">Listen to Loki</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan9-5.html">Use on your energy on defence.</a>
+				<a href="HulkED.html">Ignore what he want to say, put him down</a>
 			</div>
-			<a href="Final1.html" id = "choice3">Put all the energy in the chest and shot</a>
+			
 		</div>
 
 
