--- a/Hulk9-4.html
+++ b/Hulk9-4.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
-		<link rel="stylesheet" type="text/css" href="Style.css">
+		<link rel="stylesheet" type="text/css" href="StyleHulk.css">
 
 		<style type="text/css">
 
@@ -13,21 +13,25 @@
 				width: 25%;
 			}
 
+			#Choice3 {
+				color: darkgreen;
+			}
+
 
 		</style>
 	</head>
 	
 	<body>
-		<h1>Iron Man's Story</h1>
+		<h1>Hulk's Story</h1>
 		<p>You saw alot humans control by mind stone and attacking each other</p>
 		<img src="http://static.guim.co.uk/sys-images/Guardian/Pix/pictures/2013/6/17/1371489578534/crowd-of-people-on-London-010.jpg" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan9-5.html">Ignore them.</a>
+				<a href="Hulk9-5.html">Ignore them.</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan9-5.html">attack them</a>
+				<a href="Hulk9-5.html">attack them</a>
 			</div>
 
 		</div>
@@ -72,7 +76,7 @@
 		<br>
 		<br>
 		<br>
-		<a href="Final1.html">put them in sleep</a>
+		<a href="HulkED.html" id = "Choice3">Make a loud scream to make them ran away.</a>
 
 	</body>
 </html>
