--- a/Hulk9.html
+++ b/Hulk9.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
-		<link rel="stylesheet" type="text/css" href="Style.css">
-
+		<link rel="stylesheet" type="text/css" href="StyleHulk.css">
 		<style type="text/css">
 
 			.Vanko{
@@ -23,24 +22,24 @@
 	</head>
 	
 	<body>
-		<h1>Iron Man's Story</h1>
-		<p>You failed, try to going somewhere else</p>
+		<h1>Hulk's Story</h1>
+		<p>What you going to do?</p>
 		<img src="http://vignette2.wikia.nocookie.net/marvelcinematicuniverse/images/5/51/Andyparkart-the-avengers-loki-s-army.jpg/revision/latest?cb=20131107144742" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan9-1.html">Going South</a>
+				<a href="Hulk9-1.html">Going South</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan9-2.html">Going North</a>
+				<a href="Hulk9-2.html">Going North</a>
 			</div>
 
 			<div class = "choice" id = "choice3">
-				<a href="IronMan9-3.html">Going East</a>
+				<a href="Hulk9-3.html">Going East</a>
 			</div>
 
 			<div class = "choice" id = "choice4">
-				<a href="IronMan9-4.html">Going West</a>
+				<a href="Hulk9-4.html">Going West</a>
 			</div>
 		</div>
 	</body>
