--- a/hulk.html
+++ b/hulk.html
@@ -12,7 +12,7 @@
 			h1  {
 				font-size: 70px;
 				text-align: center;
-				background-color: black;
+				background-color: purple;
 				color: white;
 			} 
 
