--- a/Hulk9-1.html
+++ b/Hulk9-1.html
@@ -5,27 +5,31 @@
 		<link rel="stylesheet" type="text/css" href="StyleHulk.css">
 		<style type="text/css">
 
-
-			.Hemmer {
+			.Vanko{
 				display: block;
 				margin-right: auto;
 				margin-left: auto;
 				width: 50%;
-			}
+
 
 		</style>
 	</head>
 	
 	<body>
 		<h1>Hulk's Story</h1>
-		<p>You saw Abomination is destorying the street, then he notice you are here and start attacking you.</p>
-		<img src="https://upload.wikimedia.org/wikipedia/en/9/99/MovieAbomination.jpg" class = "Hemmer">
+		<p>Part of your Stark's suit has been control by Loki.</p>
+		<img src="http://images3.wikia.nocookie.net/__cb20130507170822/marveldatabase/images/5/50/Iron_Legion.png" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="Hulk3.html">Next --> </a>
+				<a href="HulkED.html">Destory them all </a>
 			</div>
 
+			<div class "choice" id = "choice2">	
+				<a href="Hulk9-5.html">Destory them with rage</a>
+			</div>
 		</div>
+
+
 
 	</body>
 </html>
