--- a/Hulk9-3.html
+++ b/Hulk9-3.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
-		<link rel="stylesheet" type="text/css" href="Style.css">
+		<link rel="stylesheet" type="text/css" href="StyleHulk.css">
 		<style type="text/css">
 
 
@@ -18,16 +18,16 @@
 	</head>
 	
 	<body>
-		<h1>Iron Man's Story</h1>
+		<h1>Hulk's Story</h1>
 		<p>You saw Chitauris are destorying the city.</p>
 		<img src="http://vignette1.wikia.nocookie.net/marvelmovies/images/6/63/301790_10150804149347113_676782112_9322420_310834602_n_(1).jpg/revision/latest?cb=20120512155947" class = "Vanko">
 		<div id = "links">
 			<div class = "choice" id = "choice1">
-				<a href="IronMan9-5.html">Ignore them.</a>
+				<a href="Hulk9-5.html">Ignore them.</a>
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="Final1.html">Stop them</a>
+				<a href="HulkED.html">Stop them</a>
 			</div>
 
 		</div>
