--- a/IronMan2.html
+++ b/IronMan2.html
@@ -2,22 +2,8 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
+		<link rel="stylesheet" type="text/css" href="Style.css">
 		<style type="text/css">
-			body {
-				background-color: darkblue;	
-			}
-
-			h1  {
-				font-size: 70px;
-				text-align: center;
-				background-color: red;
-			} 
-
-			p {
-				font-size: 20px;
-				color: white;
-				text-align: center;
-			}
 
 			.Hemmer {
 				display: block;
@@ -26,28 +12,6 @@
 
 			}
 
-			#links {
-				margin-left:auto;
-				margin-right: auto;
-				width: 17%;
-				padding-left: auto;
-				padding-right: auto;
-				font-size: 20px;
-
-			}
-
-			a:link, a:visited {
-				color:red;
-				text-decoration: underline;
-			}
-
-			a:hover {
-				color: yellow;
-			}
-
-			a:active {
-				color: brown;	
-			}
 		</style>
 	</head>
 	
