--- a/IronManBD2.html
+++ b/IronManBD2.html
@@ -2,66 +2,7 @@
 <html>
 	<head>
 		<title>Marvel Universe Game</title>
-		<style type="text/css">
-			body {
-				background-color: darkblue;
-			}
-
-			h1  {
-				font-size: 70px;
-				text-align: center;
-				background-color: red;
-			} 
-
-			.story {
-				font-size: 20px;
-				color: white;
-				text-align: center;
-			}
-
-			.hint {
-				font-size: 20px;
-				color: yellow;
-				text-align: center;
-			}
-
-			img.IM {
-				display: block;
-				width :50%;
-				margin-right: auto;
-				margin-left: auto;
-			}
-
-			#link {
-				margin-left:auto;
-				margin-right: auto;
-				width: 12%;
-				padding-left: auto;
-				padding-right: auto;
-				font-size: 20px;
-
-			}
-
-			a:link, a:visited {
-				color:red;
-				text-decoration: underline;
-			}
-
-			a:hover {
-				color: yellow;
-			}
-
-			a:active {
-				color: brown;	
-			}
-
-			img.marvel {
-				width: 0.1%;
-				margin-left: auto;
-				margin-right: auto;
-				display: block; 	
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="Style2.css">
 	</head>
 	
 	<body>
