Fix code and bag

--- a/Hulk4.html
+++ b/Hulk4.html
@@ -56,7 +56,7 @@
 			</div>
 
 			<div class "choice" id = "choice2">	
-				<a href="IronMan3.html">Let him go, </a> <a href="Hulk5.html">You felt something is wrong.</a>
+				<a href="IronMan3.html">Let him go, You felt something is </a> <a href="Hulk5.html">wrong.</a>
 			</div>
 
 		</div>
