--- a/IronManBD3.html
+++ b/IronManBD3.html
@@ -3,6 +3,14 @@
 	<head>
 		<title>Marvel Universe Game</title>
 		<link rel="stylesheet" type="text/css" href="Style2.css">
+		<style type="text/css">
+			img.IM {
+				display: block;
+				width :30%;
+				margin-right: auto;
+				margin-left: auto;
+			}
+		</style>
 	</head>
 	
 	<body>
