--- a/Hulk4.html
+++ b/Hulk4.html
@@ -55,7 +55,7 @@
 				<a href="IronManBD2.html">Give Him a last hit</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="IronMan3.html">Let him go, You felt something is </a> <a href="Hulk5.html">wrong.</a>
 			</div>
 
