--- a/Hulk7.html
+++ b/Hulk7.html
@@ -33,7 +33,7 @@
 				<a href="IronMan8.html">Punch Ironman</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="Hulk8.html">Stay quite</a>
 			</div>
 		</div>
