--- a/Hulk9-2.html
+++ b/Hulk9-2.html
@@ -33,7 +33,7 @@
 				<a href="Hulk9-5.html">Listen to Loki</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="HulkED.html">Ignore what he want to say, put him down</a>
 			</div>
 			
