--- a/Hulk9-3.html
+++ b/Hulk9-3.html
@@ -26,7 +26,7 @@
 				<a href="Hulk9-5.html">Ignore them.</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="HulkED.html">Stop them</a>
 			</div>
 
