--- a/Hulk9-4.html
+++ b/Hulk9-4.html
@@ -30,7 +30,7 @@
 				<a href="Hulk9-5.html">Ignore them.</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="Hulk9-5.html">attack them</a>
 			</div>
 
