--- a/IronMan2.html
+++ b/IronMan2.html
@@ -24,7 +24,7 @@
 				<a href="IronManBD2.html">Ask Hemmer what is he doing here</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="IronMan3.html">Be alert, activated the defending system</a>
 			</div>
 
