--- a/IronMan4.html
+++ b/IronMan4.html
@@ -30,7 +30,7 @@
 				<a href="IronMan5-1.html">Attack Whiplash at left</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="IronMan5.html">Attack Whiplash at right</a>
 			</div>
 
