--- a/IronMan7.html
+++ b/IronMan7.html
@@ -33,7 +33,7 @@
 				<a href="IronMan8.html">Talk to them</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="IronManBD3.html">Chioce to finish youself</a>
 			</div>
 		</div>
