--- a/IronMan9-1.html
+++ b/IronMan9-1.html
@@ -54,7 +54,7 @@
 				<a href="IronMan9-5.html">Destory all your suit, </a><a href="Final1.html" class = "choice" id = "choiceH">world safety </a><a href ="IronMan9-5.html">first.</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="IronMan9-5.html">Try to get your suit back to your control.</a>
 			</div>
 		</div>
