--- a/IronMan9-2.html
+++ b/IronMan9-2.html
@@ -33,7 +33,7 @@
 				<a href="IronMan9-5.html">Use all your energy on attack</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="IronMan9-5.html">Use on your energy on defence.</a>
 			</div>
 			<a href="Final1.html" id = "choice3">Put all the energy in the chest and shot</a>
