--- a/IronMan3.html
+++ b/IronMan3.html
@@ -26,7 +26,7 @@
 				<a href="IronMan4.html">Attack Whiplash at left</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="IronMan4.html">Attack Whiplash at right</a>
 			</div>
 
