--- a/IronMan9-4.html
+++ b/IronMan9-4.html
@@ -26,7 +26,7 @@
 				<a href="IronMan9-5.html">Ignore them.</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="IronMan9-5.html">attack them</a>
 			</div>
 
