--- a/IronMan9-5.html
+++ b/IronMan9-5.html
@@ -31,7 +31,7 @@
 				<a href="IronMan9-1.html">Going South</a>
 			</div>
 
-			<div class "choice" id = "choice2">	
+			<div class = "choice" id = "choice2">	
 				<a href="IronMan9-2.html">Going North</a>
 			</div>
 
